--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,21 @@
 {
 	font-family: "Parkinsans", serif;
 }
+
+input, label
+{
+	display:flex;
+}
+div{
+	display:flex;
+	flex-direction:column;
+	margin:10px;
+	background-color:skyblue;
+	padding:10px;
+	border-radius:10px;
+	
+	
+
+}
+
+
